--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "expo": "~51.0.28",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "expo": "~51.0.39",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.27",
     "firebase": "^11.0.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.16.1",
     "react-native-reanimated": "^3.10.1"
   },
